feat: add use to delete photo